@@ -1,1 +1,1 @@
-0.5.4
+0.6.0
