@@ -1,5 +1,6 @@
 v0.6.0
 	* add hook before_action and after_action
+	* improve params
 
 v0.5
 	* fix regression on empty response
